refactor: General code clean
